--- a/FlashMessages/FlashMessages.csproj
+++ b/FlashMessages/FlashMessages.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
         <RootNamespace>SharpGrip.FlashMessages</RootNamespace>
         <Nullable>enable</Nullable>
+        <LangVersion>8.0</LangVersion>
         <AssemblyName>SharpGrip.FlashMessages</AssemblyName>
         <PackageVersion>1.0.0-alpha1</PackageVersion>
         <Company>SharpGrip</Company>
